# Python-6-Web-HomeWork-06

./: .gitignore  README.md  file_parser.py  pyproject.toml
