[tool.poetry]
name = "homework-06"
version = "0.1.0"
description = ""
authors = ["VlodyaKr <vlodya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiopath = "^0.6.10"
aioshutil = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
